[project]
name = "borrowed-stability"
version = "0.1.0"
description = "Philippine peso depreciation analysis — 5 Economist-styled charts"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.50",
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.9",
    "statsmodels>=0.14",
]

[tool.uv]
package = false
